# Simple-SHA256-Checker

./: README.md  package.json  sha256-hash-checker.pem  sha256-hash-checker.sig
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/routes/: +page.svelte
